--- a/packages/pacman/PKGBUILD
+++ b/packages/pacman/PKGBUILD
@@ -10,8 +10,8 @@ pkgver=41
 pkgrel=1
 pkgdesc="Splits an audio file with a CUE sheet."
 arch=('any')
-url="https://github.com/manueldl/${_gitname}"
-source=("git+https://github.com/manueldl/${_gitname}.git")
+url="https://github.com/mdomlop/${_gitname}"
+source=("git+https://github.com/mdomlop/${_gitname}.git")
 license=('GPL3')
 makedepends=('git')
 conflicts=(${_gitname})
